<resources>
    <string name="app_name">Brahmsamaj</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>

    <string name="msg_wait">Please Wait</string>
    <string name="msg_no_internet">Please check your internet connection</string>

    <string name="err_email">Please Enter Email</string>
    <string name="err_password">Please Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="register_now">Don \'t have account &amp; Sign UP</string>
    <string name="signup">Signup</string>

    <string name="enter_fullname">FullName</string>
    <string name="enter_mail">Email</string>
    <string name="enter_pass">Password</string>
    <string name="enter_contactno">Contactno</string>
    <string name="enter_confirm_pass">Confirm Password</string>
    <string name="err_fullname">Please Enter Fullname</string>
    <string name="err_contactno">Please Enter Contact no</string>
    <string name="err_confirmpass">Please Enter Confirm Password</string>
    <string name="err_matchpass">Password and Confirm password must be same</string>
    <string name="err_passsize">The password must be at least 8 characters.</string>

    <string name="drawer_my_profile">My Profile</string>
    <string name="drawer_logout">LogOut</string>
    <string name="drawer_update_password">Update Password</string>
    <string name="drawer_update_avtar">Update Avtar</string>
    <string name="drawer_identity">Your Identity</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="hint_screen_name">Screen Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="hint_birth_place">Birth Place</string>
    <string name="hint_gotra">Gotra</string>
    <string name="hint_aadhar_num">Adhar Number</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_pincode">Pin Code</string>
    <string name="hint_occuptaion_description">Occupation Description</string>
    <string name="hint_identity_file">Identity File</string>
    <string name="hint_select_image">Select Image</string>
    <string name="hint_profile_pic">Profile Image</string>
    <string name="choose_file">Choose File</string>

    <string name="submit">Submit</string>

    <string-array name="gender">
        <item name="select">Select Gender</item>
        <item name="female">Female</item>
        <item name="male">Male</item>
    </string-array>

    <string-array name="occupation">
        <item name="select">Select Occupation</item>
        <item name="service">Service</item>
        <item name="business">Business</item>
        <item name="profession">Profession</item>
        <item name="student">Student</item>
        <item name="none_of_Above">None of Above</item>
    </string-array>
</resources>
